[package]
name = "TC-SC-Converter"
version = "1.0.0"
edition = "2024"
authors = ["Yssssssss"]
description = "A professional Rust-based Chinese simplified-traditional conversion tool with batch processing support."
license = "MIT"
repository = "https://github.com/Yssssssss/TC-SC-Converter"
homepage = "https://github.com/Yssssssss/TC-SC-Converter"
keywords = ["chinese", "converter", "traditional", "simplified", "gui"]
categories = ["utilities", "gui"]

[package.metadata.winres]
CompanyName = "Yssssssss Studio"
FileDescription = "专业级中文简繁转换工具"
LegalCopyright = "Copyright © 2025 Yssssssss. All rights reserved."
ProductName = "TC-SC Converter"
InternalName = "tc_sc_converter"
OriginalFilename = "TC-SC-Converter.exe"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
zhconv = "0.4"
rfd = "0.15"
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
encoding_rs = "0.8"
chardetng = "0.1"
chrono = "0.4"
anyhow = "1.0"
image = { version = "0.25", features = ["png", "ico"] }
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5"
tempfile = "3.10"

[build-dependencies]
winres = "0.1"
